Fixed tooltip position.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body flow-prevent-drop>
       <div class="topbar box-shadow">
-        <div class="logo" tooltip-placement="bottom" tooltip="Warp - the file manager"><i class="fa fa-rocket fa-3x"></i></div>
+        <div class="logo" tooltip-placement="left" tooltip="Warp - the file manager"><i class="fa fa-rocket fa-3x"></i></div>
       </div>
 
     <div ng-class="showMenu?'slide-out':''" class="sidebar left-menu">
