Added multipart file upload.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <link rel="shortcut icon" type="img/png" href="assets/favicon.ico">
 
     <!-- compiled JavaScript -->
+    <script type="text/javascript" src="vendor/angular-file-upload/angular-file-upload-html5-shim.js"></script>
     <script type="text/javascript" src="vendor/angular/angular.js"></script>
+    <script type="text/javascript" src="vendor/angular-file-upload/angular-file-upload.js"></script>
     <script type="text/javascript" src="vendor/angular/angular-animate.js"></script>
     <script type="text/javascript" src="vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
