Added ACL editor.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="vendor/ngProgress/ngProgress.min.js"></script>
     <script type="text/javascript" src="vendor/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="vendor/rdflib.js/rdflib.js"></script>
-    <script type="text/javascript" src="vendor/notifications/notify.js"></script>
+    <script type="text/javascript" src="vendor/notify/notify.js"></script>
     <script type="text/javascript" src="vendor/moment/moment.min.js"></script>
     <script type="text/javascript" src="vendor/ng-flow/ng-flow-standalone.js"></script>
     <script type="text/javascript" src="src/app/about/about.js"></script>
