Fixed ACLs, added profile sponger

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
     <link rel="shortcut icon" type="img/png" href="assets/favicon.ico">
 
     <!-- compiled JavaScript -->
-    <script type="text/javascript" src="vendor/angular-file-upload/angular-file-upload-html5-shim.js"></script>
     <script type="text/javascript" src="vendor/angular/angular.js"></script>
     <script type="text/javascript" src="vendor/angular-file-upload/angular-file-upload.js"></script>
-    <script type="text/javascript" src="vendor/angular/angular-animate.js"></script>
     <script type="text/javascript" src="vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script type="text/javascript" src="vendor/placeholders/angular-placeholders-0.0.1-SNAPSHOT.min.js"></script>
@@ -28,11 +26,10 @@
     <script type="text/javascript" src="vendor/rdflib.js/rdflib.js"></script>
     <script type="text/javascript" src="vendor/notify/notify.js"></script>
     <script type="text/javascript" src="vendor/moment/moment.min.js"></script>
-    <script type="text/javascript" src="vendor/ng-flow/ng-flow-standalone.js"></script>
     <script type="text/javascript" src="src/app/about/about.js"></script>
     <script type="text/javascript" src="src/app/app.js"></script>
     <script type="text/javascript" src="src/app/list/list.js"></script>
-    <script type="text/javascript" src="src/assets/common.js"></script>
+    <script type="text/javascript" src="src/common/common.js"></script>
     <script type="text/javascript" src="templates-common.js"></script>
     <script type="text/javascript" src="templates-app.js"></script>
   </head>
