--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <link rel="shortcut icon" type="img/png" href="assets/favicon.ico">
 
     <!-- compiled JavaScript -->
+    <script type="text/javascript" src="vendor/ng-file-upload/angular-file-upload-shim.min.js"></script>
     <script type="text/javascript" src="vendor/angular/angular.js"></script>
-    <script type="text/javascript" src="vendor/angular-file-upload/angular-file-upload.js"></script>
+    <script type="text/javascript" src="vendor/ng-file-upload/angular-file-upload.min.js"></script>
     <script type="text/javascript" src="vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script type="text/javascript" src="vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script type="text/javascript" src="vendor/placeholders/angular-placeholders-0.0.1-SNAPSHOT.min.js"></script>
