Use defaultForNew by default for all dirs. Favicon ico->png

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="assets/App-1.1.0.css" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" type="img/png" href="assets/favicon.ico">
+    <link rel="shortcut icon" type="img/png" href="assets/favicon.png">
 
     <!-- compiled JavaScript -->
     <script type="text/javascript" src="vendor/ng-file-upload/angular-file-upload-shim.min.js"></script>
